--- a/navbar-pages/responsive.css
+++ b/navbar-pages/responsive.css
@@ -68,7 +68,7 @@
     }
 }
 
-@media (max-width: 520px) {
+@media (max-width: 550px) {
     #navigation-bar, #upcoming-events-text, .drop-btn, .dropdown-content, .btn {
         font-size: 9px;
     }
@@ -110,5 +110,12 @@
     .news {
         padding-left: 30px;
         padding-right: 30px;
+    }
+}
+
+@media (min-width: 350px) and (max-width: 379.98px) {
+    .news {
+        padding-left: 25px;
+        padding-right: 25px;
     }
 }
