--- a/responsive.css
+++ b/responsive.css
@@ -62,7 +62,7 @@
     }
 }
 
-@media (max-width: 520px) {
+@media (max-width: 550px) {
     #navigation-bar, #upcoming-events-text, .drop-btn, .dropdown-content, .btn {
         font-size: 9px;
     }
@@ -89,5 +89,12 @@
 @media (max-width: 360px) {
     #see-all-upcoming-events-button {
         font-size: 12px;
+    }
+}
+
+@media (min-width: 350px) and (max-width: 379.98px) {
+    .news {
+        padding-left: 25px;
+        padding-right: 25px;
     }
 }
